Edit promo section  bg

--- a/src/sass/blocks/_promo.scss
+++ b/src/sass/blocks/_promo.scss
@@ -1,8 +1,7 @@
 .promo {
     min-height: 800px;
     padding-top: 92px;
-    background: url("../img/promo_bg.jpg") no-repeat;
-    background-size: 1920px 700px;
+    background: url("../img/promo_bg.jpg") no-repeat 50%;
     &__title {
         width: 926px;
     }
