--- a/src/sass/blocks/_title.scss
+++ b/src/sass/blocks/_title.scss
@@ -4,6 +4,11 @@
         font-size: 58px;
         line-height: 70px;
     }
+    &_fz42 {
+        font-weight: 500;
+        font-size: 42px;
+        line-height: 50px;
+    }
     &_fz28 {
         font-weight: 600;
         font-size: 28px;
