Finish promotions section

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -52,7 +52,9 @@ h1, h2 {
 }
 
 @import "blocks/title";
+@import "blocks/slider";
 
 @import "blocks/header";
 @import "blocks/promo";
 @import "blocks/freeConsult";
+@import "blocks/promotions";
