--- a/src/sass/blocks/_title.scss
+++ b/src/sass/blocks/_title.scss
@@ -8,6 +8,7 @@
         font-weight: 500;
         font-size: 42px;
         line-height: 50px;
+        text-align: center;
     }
     &_fz28 {
         font-weight: 600;
