--- a/src/sass/blocks/_header.scss
+++ b/src/sass/blocks/_header.scss
@@ -48,6 +48,7 @@
             font-size: 20px;
             line-height: 28px;
             letter-spacing: 0.025em;
+            text-align: end;
             a {
                 color: #474551;
             }
