--- a/src/sass/blocks/_promo.scss
+++ b/src/sass/blocks/_promo.scss
@@ -21,12 +21,8 @@
             color: $colorText_3;
         }
     }
-    &__btn {
-        width: 190px;
-        height: 40px;
+    .signUpBtn {
         background: $colorBtn;
-        box-shadow: 0px 15px 20px rgba(0, 0, 0, 0.05);
-        border-radius: 30px;
         border: none;
         font-weight: 600;
         font-size: 18px;
