--- a/src/sass/blocks/_service.scss
+++ b/src/sass/blocks/_service.scss
@@ -16,6 +16,7 @@
         grid-template-rows: minmax(560px, auto);
         grid-auto-rows: minmax(560px, auto);
         gap: 30px;
+        margin-top: 59px;
     }
     &__item {
         position: relative;
@@ -41,38 +42,21 @@
             width: 391px;
             min-height: 191px;
         }
-        &_contacts {
-            display: grid;
-            grid-template-columns: 65px 214px;
-            column-gap: 30px;
-            justify-content: center;
-            margin-top: 10px;
-
-            font-weight: 400;
-            font-size: 18px;
-            line-height: 28px;
-        }
         &_btns {
             width: 408px;
             margin: 33px auto 0 auto;
             display: flex;
             justify-content: space-between;
-            &_signUp, &_price {
-                width: 188px;
-                height: 40px;
-                border: 2px solid $colorText_2;
-                box-shadow: 0px 15px 20px rgba(0, 0, 0, 0.05);
-                border-radius: 30px;
-
+            .signUpBtn, .priceBtn {
                 font-weight: 600;
                 font-size: 20px;
                 line-height: 26px;
                 color: $colorText_2;
             }
-            &_signUp {
+            .signUpBtn {
                 background: rgba(255, 255, 255, 0.6);
             }
-            &_price {
+            .priceBtn {
                 background: $colorBg_1;
             }
         }
@@ -85,3 +69,6 @@
         }
     }
 }
+
+
+
