Finish helper section

--- a/src/sass/blocks/_contacts.scss
+++ b/src/sass/blocks/_contacts.scss
@@ -19,5 +19,9 @@
         cursor: pointer;
         width: 28px;
         height: 28px;
+        &:hover {
+            width: 30px;
+            height: 30px;
+        }
     }
 }
