--- a/src/sass/blocks/_promotions.scss
+++ b/src/sass/blocks/_promotions.scss
@@ -1,5 +1,6 @@
 .promotions {
     padding-top: 90px;
+    min-height: 747px;
     &__descr {
         width: 1066px;
         margin: 30px auto 0 auto;
@@ -7,12 +8,6 @@
         span {
             font-weight: 700;
             color: $colorText_1;
-        }
-    }
-    .tns-item {
-        img {
-            width: 410px;
-            height: 410px;
         }
     }
     .slider {
@@ -25,6 +20,32 @@
                 top: 185px;
                 right: -50px;
             }
+        }
+        &__nav {
+            justify-content: center;
+            align-items: center;
+            margin-top: 33px;
+            &_dot {
+                width: 18px;
+                height: 18px;
+                background: #BDF8F9;
+                border-radius: 100%;
+                margin-right: 20px;
+                cursor: pointer;
+            }
+        }
+        .tns-item {
+            img {
+                width: 410px;
+                height: 410px;
+            }
+        }
+        .tns-nav-active {
+            background: $colorText_3;
+            width: 24px;
+            height: 24px;
+            margin-right: 20px;
+            border-radius: 100%;
         }
     }
 }
