--- a/src/sass/blocks/_title.scss
+++ b/src/sass/blocks/_title.scss
@@ -10,6 +10,11 @@
         line-height: 50px;
         text-align: center;
     }
+    &_fz36 {
+        font-weight: 700;
+        font-size: 36px;
+        line-height: 45px;
+    }
     &_fz28 {
         font-weight: 600;
         font-size: 28px;
