--- a/src/sass/blocks/_buttons.scss
+++ b/src/sass/blocks/_buttons.scss
@@ -4,7 +4,18 @@
     border: 2px solid $colorText_2;
     box-shadow: 0px 15px 20px rgba(0, 0, 0, 0.05);
     border-radius: 30px;
-    &_withoutBorder {
+    background: rgba(255, 255, 255, 0.6);
+    color: $colorText_2;
+    &:hover {
+        background: $colorBg_1;
+    }
+    &_colorBtn {
+        background: $colorBtn;
+        color: #FFFFFF;
         border: none;
+        &:hover {
+            background: $colorBtn;
+            box-shadow: 0px 0px 10px $colorBtn;
+        }
     }
 }
