--- a/src/sass/blocks/_slider.scss
+++ b/src/sass/blocks/_slider.scss
@@ -1,6 +1,6 @@
 .slider {
     position: relative;
-    margin-top: 29px;
+    margin-top: 30px;
     &__controls {
         &_prevBtn, &_nextBtn {
             position: absolute;
@@ -8,30 +8,17 @@
             width: 40px;
             height: 40px;
             filter: drop-shadow(0px 15px 20px rgba(0, 0, 0, 0.05));
+            &:hover {
+                svg {
+                    circle {
+                        fill: $colorBg_1;
+                    }
+                }
+            }
         }
     }
     &__nav {
         list-style: none;
         display: flex;
-        justify-content: center;
-        align-items: center;
-        margin-top: 33px;
-        &_dot {
-            box-sizing: content-box;
-            width: 18px;
-            height: 18px;
-            background: #BDF8F9;
-            border-radius: 100%;
-            margin-right: 20px;
-            cursor: pointer;
-        }
     }
-}
-.tns-nav-active {
-    box-sizing: content-box;
-    width: 24px;
-    height: 24px;
-    background: #33D9DA;
-    border-radius: 100%;
-    margin-right: 20px;
 }
