Finish section reviews and licenses

--- a/src/sass/blocks/_slider.scss
+++ b/src/sass/blocks/_slider.scss
@@ -20,5 +20,23 @@
     &__nav {
         list-style: none;
         display: flex;
+        justify-content: center;
+        align-items: center;
+        margin-top: 33px;
+        &_dot {
+            width: 18px;
+            height: 18px;
+            background: #BDF8F9;
+            border-radius: 100%;
+            margin-right: 20px;
+            cursor: pointer;
+        }
+    }
+    .tns-nav-active {
+        background: $colorText_3;
+        width: 24px;
+        height: 24px;
+        margin-right: 20px;
+        border-radius: 100%;
     }
 }
