--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -53,3 +53,5 @@ h1, h2 {
 @import "blocks/hygiene";
 @import "blocks/doctors";
 @import "blocks/helper";
+@import "blocks/reviews";
+@import "blocks/licenses";
