Finish section aboutClinic

--- a/src/sass/blocks/_doctors.scss
+++ b/src/sass/blocks/_doctors.scss
@@ -1,6 +1,6 @@
 .doctors {
     padding-top: 90px;
-    &__descr {
+    &__subtitle {
         width: 1066px;
         text-align: center;
         margin: 30px auto 0 auto;
