--- a/src/sass/blocks/_helper.scss
+++ b/src/sass/blocks/_helper.scss
@@ -1,6 +1,6 @@
 .helper {
     padding-top: 90px;
-    &__descr {
+    &__subtitle {
         color: $colorText_2;
         span {
             font-weight: 800;
