--- a/src/sass/blocks/_hygiene.scss
+++ b/src/sass/blocks/_hygiene.scss
@@ -16,7 +16,7 @@
             color: $colorText_1;
         }
     }
-    &__descr {
+    &__subtitle {
         margin-top: 60px;
         margin-bottom: 9px;
         font-weight: 400;
