--- a/src/sass/blocks/_reviews.scss
+++ b/src/sass/blocks/_reviews.scss
@@ -1,7 +1,7 @@
 .reviews {
     padding-top: 100px;
     min-height: 650px;
-    &__descr {
+    &__subtitle {
         text-align: center;
         margin: 30px auto 0 auto;
         width: 1066px;
