--- a/src/sass/blocks/_service.scss
+++ b/src/sass/blocks/_service.scss
@@ -1,6 +1,6 @@
 .service {
     padding-top: 90px;
-    &__descr {
+    &__subtitle {
         width: 1066px;
         margin: 30px auto 0 auto;
         text-align: center;
