--- a/src/sass/blocks/_freeConsult.scss
+++ b/src/sass/blocks/_freeConsult.scss
@@ -1,6 +1,6 @@
 .freeConsult {
     padding-top: 128px;
-    &__descr {
+    &__subtitle {
         text-align: center;
         margin-top: 30px;
     }
