--- a/src/sass/blocks/_promotions.scss
+++ b/src/sass/blocks/_promotions.scss
@@ -1,7 +1,7 @@
 .promotions {
     padding-top: 90px;
     min-height: 747px;
-    &__descr {
+    &__subtitle {
         width: 1066px;
         margin: 30px auto 0 auto;
         text-align: center;
