Finish footer, modalEntry

--- a/src/sass/blocks/_buttons.scss
+++ b/src/sass/blocks/_buttons.scss
@@ -9,7 +9,7 @@
     &:hover {
         background: $colorBg_1;
     }
-    &_colorBtn {
+    &_color {
         background: $colorBtn;
         color: #FFFFFF;
         border: none;
