--- a/src/sass/blocks/_contacts.scss
+++ b/src/sass/blocks/_contacts.scss
@@ -1,27 +1,55 @@
 .contacts {
-    display: grid;
-    grid-template-columns: 65px 214px;
-    column-gap: 30px;
-    justify-content: center;
-    margin-top: 10px;
-
-    font-weight: 400;
-    font-size: 18px;
-    line-height: 28px;
-}
-
-.messengers {
-    display: flex;
-    justify-content: space-between;
-    width: 65px;
-    height: 28px;
-    img {
-        cursor: pointer;
-        width: 28px;
-        height: 28px;
-        &:hover {
-            width: 30px;
-            height: 30px;
+    position: relative;
+    margin: 0 auto;
+    width: 1920px;
+    &__wrapper {
+        position: absolute;
+        top: 50%;
+        transform: translateY(-50%);
+        left: 327px;
+        padding: 30px 140px 25px 60px;
+        width: 538px;
+        border-radius: 20px;
+        opacity: 0.8;
+        background: $colorText_2;
+        box-shadow: 0px 15px 20px 0px rgba(0, 0, 0, 0.05);
+    }
+    &__title {
+        text-align: left;
+        line-height: 36px;
+        color: #fff;
+    }
+    &__address {
+        color: #fff;
+        font-size: 24px;
+        font-weight: 500;
+        margin-top: 30px;
+        line-height: 30px;
+    }
+    &__timeWork {
+        margin-top: 20px;
+        color: #fff;
+        font-size: 14px;
+        span {
+            font-weight: 500;
+            font-size: 18px;
+            color: #fff;
+        }
+    }
+    &__phone {
+        margin-top: 30px;
+        width: 212px;
+        a {
+            font-size: 24px;    
+            font-weight: 600;
+            line-height: 39px;
+            color: #fff;
+        }
+    }
+    .messengers {
+        justify-content: flex-start;
+        &__text {
+            color: #fff;
         }
     }
 }
