--- a/src/sass/blocks/_doctors.scss
+++ b/src/sass/blocks/_doctors.scss
@@ -142,6 +142,7 @@
     }
     .signUpBtn {
         position: absolute;
+        width: 190px;
         top: 720px;
         right: 209px;
         font-weight: 600;
