--- a/src/sass/blocks/_promo.scss
+++ b/src/sass/blocks/_promo.scss
@@ -21,6 +21,7 @@
         }
     }
     .signUpBtn {
+        width: 190px;
         font-weight: 600;
         font-size: 18px;
         line-height: 22px;
