--- a/src/sass/blocks/_service.scss
+++ b/src/sass/blocks/_service.scss
@@ -47,6 +47,7 @@
             display: flex;
             justify-content: space-between;
             .signUpBtn, .priceBtn {
+                width: 190px;
                 font-weight: 600;
                 font-size: 20px;
                 line-height: 26px;
