--- a/src/sass/blocks/_form.scss
+++ b/src/sass/blocks/_form.scss
@@ -1,4 +1,4 @@
-.entryForm {
+.signUpForm {
     input {
         width: 300px;
         height: 40px;
@@ -14,7 +14,7 @@
             margin-top: 20px;
         }
     }
-    button {
+    &__btn {
         width: 300px;
         height: 40px;
         margin-top: 20px;
