--- a/src/sass/blocks/_modals.scss
+++ b/src/sass/blocks/_modals.scss
@@ -1,4 +1,4 @@
-.modalEntry {
+.modalSignUp {
     position: fixed;
     top: 0;
     left: 0;
@@ -24,15 +24,82 @@
     }
     &__close {
         position: absolute;
-        top: 20px;
-        right: 20px;
-        width: 20px;
-        height: 20px;
-        text-align: center;
-        font-size: 20px;
+        top: 10px;
+        right: 10px;
+        width: 42px;
+        height: 42px;
+        background: url("../icons/close_icon.svg") no-repeat center;
         cursor: pointer;
     }
-    .entryForm {
+    .signUpForm {
         margin-top: 10px;
     }
 }
+
+.modalPrice {
+    position: fixed;
+    top: 0px;
+    left: 0px;
+    width: 100%;
+    height: 100%;
+    &__content {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        width: 480px;
+        height: 400px;
+        background: $colorBg_2;
+        padding: 60px 33px 68px 33px;
+        text-align: center;
+    }
+    &__close {
+        position: absolute;
+        top: 10px;
+        right: 10px;
+        width: 42px;
+        height: 42px;
+        background: url("../icons/close_icon.svg") no-repeat center;
+        cursor: pointer;
+    }
+    &__icon {
+        display: block;
+        margin: 22px auto 0 auto;
+        width: 56px;
+        height: 56px;
+    }
+    &__btn {
+        font-size: 20px;
+        font-weight: 600;
+        margin-top: 21px;
+        width: 334px;
+    }
+    .messengers {
+        margin-top: 30px;
+    }
+}
+
+// .modal {
+//     position: fixed;
+//     top: 0px;
+//     left: 0px;
+//     width: 100%;
+//     height: 100%;
+//     &__content {
+//         position: absolute;
+//         top: 50%;
+//         left: 50%;
+//         transform: translate(-50%, -50%); 
+//         background: $colorBg_2;
+//         text-align: center;
+//     }
+//     &__close {
+//         position: absolute;
+//         top: 10px;
+//         right: 10px;
+//         width: 42px;
+//         height: 42px;
+//         background: url("../icons/close_icon.svg") no-repeat center;
+//         cursor: pointer;
+//     }
+// }
