--- a/src/sass/blocks/_primaryConsult.scss
+++ b/src/sass/blocks/_primaryConsult.scss
@@ -27,7 +27,7 @@
         color: $colorText_2;
         line-height: 29px;
     }
-    .entryForm {
+    .signUpForm {
         margin-top: 30px;
     }
 }
