--- a/src/sass/blocks/_primaryConsult.scss
+++ b/src/sass/blocks/_primaryConsult.scss
@@ -20,14 +20,12 @@
         line-height: 34px;
         color: $colorText_1;
     }
-    &__descr {
-        margin-top: 14px;
-        font-size: 24px;    
-        font-weight: 500;
-        color: $colorText_2;
-        line-height: 29px;
-    }
     .signUpForm {
-        margin-top: 30px;
+        margin-top: 20px;
+        input {
+            &:nth-child(2) {
+                margin-top: 20px;
+            }
+        }
     }
 }
