--- a/src/sass/blocks/_modals.scss
+++ b/src/sass/blocks/_modals.scss
@@ -10,7 +10,7 @@
         left: 50%;
         transform: translate(-50%, -50%);
         width: 480px;
-        height: 340px;
+        min-height: 115px;
         border-radius: 20px;
         background: $colorBg_2;
         box-shadow: 0px 15px 20px 0px rgba(0, 0, 0, 0.05);
@@ -34,7 +34,7 @@
         }
         input {
             &:nth-child(2) {
-                margin-top: 10px;
+                margin-top: 18px;
             }
         }
     }
@@ -236,27 +236,24 @@
     }
 }
 
-// .modal {
-//     position: fixed;
-//     top: 0px;
-//     left: 0px;
-//     width: 100%;
-//     height: 100%;
-//     &__content {
-//         position: absolute;
-//         top: 50%;
-//         left: 50%;
-//         transform: translate(-50%, -50%); 
-//         background: $colorBg_2;
-//         text-align: center;
-//     }
-//     &__close {
-//         position: absolute;
-//         top: 10px;
-//         right: 10px;
-//         width: 42px;
-//         height: 42px;
-//         background: url("../icons/close_icon.svg") no-repeat center;
-//         cursor: pointer;
-//     }
-// }
+.modalResult {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    &__content {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        width: 480px;
+        height: 115px;
+        border-radius: 20px;
+        background: $colorBg_2;
+        box-shadow: 0px 15px 20px 0px rgba(0, 0, 0, 0.05);
+        padding: 30px 65px 36px 65px;
+        text-align: center;
+        font-size: 22px;
+    }
+}
