--- a/src/sass/blocks/_helper.scss
+++ b/src/sass/blocks/_helper.scss
@@ -2,6 +2,9 @@
     padding-top: 90px;
     &__subtitle {
         color: $colorText_2;
+        font-weight: 700;
+        font-size: 36px;
+        line-height: 45px;
         span {
             font-weight: 800;
             color: $colorText_1;
