--- a/src/sass/blocks/_messengers.scss
+++ b/src/sass/blocks/_messengers.scss
@@ -15,7 +15,7 @@
     justify-content: space-between;
     width: 65px;
     height: 28px;
-    img {
+    &__img {
         cursor: pointer;
         width: 28px;
         height: 28px;
