--- a/src/sass/blocks/_contacts.scss
+++ b/src/sass/blocks/_contacts.scss
@@ -1,7 +1,8 @@
 .contacts {
     position: relative;
     margin: 0 auto;
-    width: 1920px;
+    width: 100%;
+    height: 540px;
     &__wrapper {
         position: absolute;
         top: 50%;
@@ -51,5 +52,9 @@
         &__text {
             color: #fff;
         }
+    }
+    iframe {
+        width: 100%;
+        height: 100%;
     }
 }
