--- a/src/sass/blocks/_freeConsult.scss
+++ b/src/sass/blocks/_freeConsult.scss
@@ -7,33 +7,32 @@
     &__wrapper {
         margin-top: 60px;
         display: grid;
-        grid-template-columns: repeat(3, 410px);
+        grid-template-columns: repeat(auto-fill, 410px);
         grid-template-rows: minmax(422px, auto);
         column-gap: 30px;
     }
-    &__item {
-        &_img {
-            width: 410px;
-            height: 280px;
-        }
-        &_title {
-            font-weight: 600;
-            font-size: 24px;
-            line-height: 29px;
-            text-align: center;
-        }
-        &_descr {
-            margin-top: 20px;
-            font-weight: 400;
-            font-size: 18px;
-            line-height: 22px;
-            text-align: center;
-        }
+    &__item-img {
+        width: 100%;
+        height: 280px;
     }
-    .signUpBtn {
+    &__item-title {
+        font-weight: 600;
+        font-size: 24px;
+        line-height: 29px;
+        text-align: center;
+        margin-top: 20px;
+    }
+    &__item-descr {
+        margin-top: 20px;
+        font-weight: 400;
+        font-size: 18px;
+        line-height: 22px;
+        text-align: center;
+    }
+    &__btn {
         display: block;
         margin: 40px auto 0 auto;
-        width: 404px;
+        width: 400px;
         height: 60px;
         font-weight: 600;
         font-size: 24px;
