--- a/src/sass/blocks/_logo.scss
+++ b/src/sass/blocks/_logo.scss
@@ -1,13 +1,11 @@
-.mainLogo {
+.logo {
     display: flex;
     align-items: center;
     width: 300px;
-    height: 94px;
-    &__logo {
-        img {
-            width: 95px;
-            height: 94px;
-        }
+    min-height: 94px;
+    &__img {
+        width: 95px;
+        height: 94px;
     }
     &__name {
         margin-left: 15px;
