--- a/src/sass/blocks/_promo.scss
+++ b/src/sass/blocks/_promo.scss
@@ -20,7 +20,7 @@
             color: $colorText_3;
         }
     }
-    .signUpBtn {
+    &__btn{
         width: 190px;
         font-weight: 600;
         font-size: 18px;
@@ -36,36 +36,35 @@
         width: 410px;
         min-height: 150px;
         padding-left: 19px;
+        padding-right: 25px;
         background-color: $colorBg_2;
         box-shadow: 0px 15px 20px rgba(0, 0, 0, 0.05);
         border-radius: 20px;
-        display: grid;
-        grid-template-columns: 63px 272px;
-        column-gap: 31px;
-        &_descr {
-           padding-top: 20px;
-           padding-bottom: 36px;
-        }
-        &_img {
-            display: flex;
-            align-items: center;
-            img {
-                width: 63px;
-                height: 63px;
-            }
-        }
-        &_title {
-            font-weight: 600;
-            font-size: 24px;
-            line-height: 34px;
-            color: $colorText_2;
-        }
-        &_text {
-            font-weight: 400;
-            font-size: 18px;
-            line-height: 25px;
-            color: #000000;
-            margin-top: 10px;
-        }
+        display: flex;
+        justify-content: space-between; 
+    }
+    &__item-img {  
+        display: block;
+        margin: auto 0;
+        width: 63px;
+        height: 63px;
+    }
+    &__item-descr {
+        width: 272px;
+        padding-top: 20px;
+        padding-bottom: 36px;
+    }
+    &__item-title {
+        font-weight: 600;
+        font-size: 24px;
+        line-height: 34px;
+        color: $colorText_2;
+    }
+    &__item-text {
+        font-weight: 400;
+        font-size: 18px;
+        line-height: 25px;
+        color: #000000;
+        margin-top: 10px;
     }
 }
