--- a/src/sass/blocks/_slider.scss
+++ b/src/sass/blocks/_slider.scss
@@ -1,18 +1,29 @@
 .slider {
     position: relative;
-    margin-top: 30px;
-    &__controls {
-        &_prevBtn, &_nextBtn {
-            position: absolute;
-            cursor: pointer;
-            width: 40px;
-            height: 40px;
-            filter: drop-shadow(0px 15px 20px rgba(0, 0, 0, 0.05));
-            &:hover {
-                svg {
-                    circle {
-                        fill: $colorBg_1;
-                    }
+    &__controls-prevBtn {
+        position: absolute;
+        cursor: pointer;
+        width: 40px;
+        height: 40px;
+        filter: drop-shadow(0px 15px 20px rgba(0, 0, 0, 0.05));
+        &:hover {
+            svg {
+                circle {
+                    fill: $colorBg_1;
+                }
+            }
+        }
+    }
+    &__controls-nextBtn {
+        position: absolute;
+        cursor: pointer;
+        width: 40px;
+        height: 40px;
+        filter: drop-shadow(0px 15px 20px rgba(0, 0, 0, 0.05));
+        &:hover {
+            svg {
+                circle {
+                    fill: $colorBg_1;
                 }
             }
         }
@@ -23,13 +34,17 @@
         justify-content: center;
         align-items: center;
         margin-top: 33px;
-        &_dot {
-            width: 18px;
-            height: 18px;
-            background: #BDF8F9;
-            border-radius: 100%;
-            margin-right: 20px;
-            cursor: pointer;
+        padding-inline-start: 0px;
+    }
+    &__nav-dot {
+        width: 18px;
+        height: 18px;
+        background: #BDF8F9;
+        border-radius: 100%;
+        margin-right: 20px;
+        cursor: pointer;
+        &:last-child {
+            margin-right: 0px;
         }
     }
     .tns-nav-active {
